// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalDisposalGenerator should not set ASN and arrests adjudications and disposals when there are no offences added by the court with results compatible with disposals 1`] = `
{
  "operation": "DISARR",
  "request": {
    "arrestSummonsNumber": null,
    "arrestsAdjudicationsAndDisposals": [],
    "courtCaseReferenceNumber": "97/1626/8395Q",
    "courtHouseName": "",
    "croNumber": null,
    "dateOfHearing": "05122024",
    "forceStationCode": "02YZ",
    "generatedPNCFilename": "",
    "hearingsAdjudicationsAndDisposals": [
      {
        "courtOffenceSequenceNumber": "",
        "offenceReason": "RT88191",
        "type": "ORDINARY",
      },
      {
        "hearingDate": "",
        "numberOffencesTakenIntoAccount": "0000",
        "pleaStatus": "",
        "type": "ADJUDICATION",
        "verdict": "",
      },
      {
        "disposalQualifiers": "",
        "disposalQuantity": "                      00",
        "disposalText": "",
        "disposalType": "2059",
        "type": "DISPOSAL",
      },
    ],
    "pendingCourtDate": null,
    "pendingCourtHouseName": null,
    "pendingPsaCourtCode": null,
    "pncCheckName": null,
    "pncIdentifier": null,
    "preTrialIssuesUniqueReferenceNumber": null,
    "psaCourtCode": null,
  },
}
`;

exports[`normalDisposalGenerator should set ASN and arrests adjudications and disposals when there is an offence added by the court with results compatible with disposals 1`] = `
{
  "operation": "DISARR",
  "request": {
    "arrestSummonsNumber": "11/01ZD/01/410780J",
    "arrestsAdjudicationsAndDisposals": [
      {
        "committedOnBail": "N",
        "courtOffenceSequenceNumber": null,
        "locationOfOffence": "Not provided by Court",
        "offenceEndDate": "",
        "offenceEndTime": "",
        "offenceLocationFSCode": "02BJ",
        "offenceReason": "RT88191",
        "offenceReasonSequence": "",
        "offenceStartDate": "01012025",
        "offenceStartTime": "",
        "type": "ARREST",
      },
      {
        "hearingDate": "",
        "numberOffencesTakenIntoAccount": "0000",
        "pleaStatus": "",
        "type": "ADJUDICATION",
        "verdict": "",
      },
      {
        "disposalQualifiers": "",
        "disposalQuantity": "                      00",
        "disposalText": "",
        "disposalType": "2059",
        "type": "DISPOSAL",
      },
    ],
    "courtCaseReferenceNumber": "97/1626/8395Q",
    "courtHouseName": "",
    "croNumber": null,
    "dateOfHearing": "05122024",
    "forceStationCode": "02YZ",
    "generatedPNCFilename": "",
    "hearingsAdjudicationsAndDisposals": [],
    "pendingCourtDate": null,
    "pendingCourtHouseName": null,
    "pendingPsaCourtCode": null,
    "pncCheckName": null,
    "pncIdentifier": null,
    "preTrialIssuesUniqueReferenceNumber": null,
    "psaCourtCode": null,
  },
}
`;

exports[`normalDisposalGenerator should set PTIURN (Pre Trial Issues Unique Reference Number) when case requires RCC and has reportable offences 1`] = `
{
  "operation": "DISARR",
  "request": {
    "arrestSummonsNumber": "11/01ZD/01/410780J",
    "arrestsAdjudicationsAndDisposals": [
      {
        "committedOnBail": "N",
        "courtOffenceSequenceNumber": null,
        "locationOfOffence": "Not provided by Court",
        "offenceEndDate": "",
        "offenceEndTime": "",
        "offenceLocationFSCode": "02BJ",
        "offenceReason": "RT88191",
        "offenceReasonSequence": "",
        "offenceStartDate": "01012025",
        "offenceStartTime": "",
        "type": "ARREST",
      },
      {
        "hearingDate": "",
        "numberOffencesTakenIntoAccount": "0000",
        "pleaStatus": "",
        "type": "ADJUDICATION",
        "verdict": "",
      },
      {
        "disposalQualifiers": "",
        "disposalQuantity": "                      00",
        "disposalText": "",
        "disposalType": "2059",
        "type": "DISPOSAL",
      },
      {
        "committedOnBail": "N",
        "courtOffenceSequenceNumber": null,
        "locationOfOffence": "Not provided by Court",
        "offenceEndDate": "",
        "offenceEndTime": "",
        "offenceLocationFSCode": "02BJ",
        "offenceReason": "RT88191",
        "offenceReasonSequence": "",
        "offenceStartDate": "01012025",
        "offenceStartTime": "",
        "type": "ARREST",
      },
      {
        "hearingDate": "",
        "numberOffencesTakenIntoAccount": "0000",
        "pleaStatus": "",
        "type": "ADJUDICATION",
        "verdict": "",
      },
      {
        "disposalQualifiers": "",
        "disposalQuantity": "    11122024          00",
        "disposalText": "",
        "disposalType": "2060",
        "type": "DISPOSAL",
      },
      {
        "committedOnBail": "N",
        "courtOffenceSequenceNumber": null,
        "locationOfOffence": "Not provided by Court",
        "offenceEndDate": "",
        "offenceEndTime": "",
        "offenceLocationFSCode": "02BJ",
        "offenceReason": "RT88191",
        "offenceReasonSequence": "",
        "offenceStartDate": "01012025",
        "offenceStartTime": "",
        "type": "ARREST",
      },
      {
        "hearingDate": "05122024",
        "numberOffencesTakenIntoAccount": "0000",
        "pleaStatus": "",
        "type": "ADJUDICATION",
        "verdict": "NON-CONVICTION",
      },
      {
        "disposalQualifiers": "",
        "disposalQuantity": "    11122024          00",
        "disposalText": "",
        "disposalType": "2061",
        "type": "DISPOSAL",
      },
    ],
    "courtCaseReferenceNumber": "97/1626/8395Q",
    "courtHouseName": "",
    "croNumber": null,
    "dateOfHearing": "05122024",
    "forceStationCode": "02YZ",
    "generatedPNCFilename": "",
    "hearingsAdjudicationsAndDisposals": [],
    "pendingCourtDate": null,
    "pendingCourtHouseName": null,
    "pendingPsaCourtCode": null,
    "pncCheckName": null,
    "pncIdentifier": null,
    "preTrialIssuesUniqueReferenceNumber": "01ZD/0303208",
    "psaCourtCode": null,
  },
}
`;
